src/test/deca/context/valid/created/float_as_identifier.deca
{
    int a, float, b;
    float x;
    float = 5;
}