src/test/deca/context/invalid/created/wrong_type_BOOLEAN_FLOAT.deca
{
    boolean a;
    a = 6.9;
}